# open115

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: docker-build.yml
app/: main.py
app/api/: file.py  magnet.py
app/core/: __init__.py  cache.py  config.py  logger.py
app/service/: cloudflare.py  open115.py  token_manager.py  token_store.py
tests/: conftest.py  test_cache_backend.py  test_download_cache.py  test_magnet_api.py  test_token_refresh.py
